[tool.poetry]
name = "blacklist"
version = "0.1.0"
description = ""
authors = ["Dmitriev Andrey <dmitriev.andrey@customscard.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.12.0"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"
orjson = "^3.9.10"
redis = "^5.0.1"
flake8-bugbear = "^23.11.28"
pep8-naming = "^0.13.3"
black = "^23.11.0"
pre-commit = "^3.5.0"
flake8-builtins = "^2.2.0"
flake8-quotes = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120
force_single_line = true

[tool.mypy]
python_version = 3.11
plugins = ["pydantic.mypy"]
check_untyped_defs = true

[tool.black]
line-length = 120
target-version = ["py311"]
skip-string-normalization = true
